Funcion de ocultar el boton 'ver mas' cuando no hay mas productos en la lista

--- a/index.html
+++ b/index.html
@@ -90,9 +90,12 @@
           </div>
         </div>
 
-        <div class="container product-grid">
+        <div class="container product-grid"></div>
 
+        <div class="btnVerMasContainer">
+          <button type="button" class="btnVerMas btn primary">Ver más</button>
         </div>
+
       </section>
     </main>
     <footer id="contacto" class="site-footer">
