Funcion de filtro por categoria terminado

--- a/index.html
+++ b/index.html
@@ -87,7 +87,17 @@
             <p class="lede">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione quos earum voluptas
             </p>
+            <br>
+            <h2>
+              Aplicar filtros
+            </h2>
           </div>
+        </div>
+
+        <div class="filtrosContainer container">
+          <button type="button" class="btnFiltroPerifericos btn ghost">Periféricos</button>
+          <button type="button" class="btnFiltroHardware btn ghost">HardWare</button>
+          <button type="button" class="btnFiltroMuebles btn ghost">Muebles</button>
         </div>
 
         <div class="container product-grid"></div>
