carrito en proceso

--- a/index.html
+++ b/index.html
@@ -42,6 +42,27 @@
           </svg>
         </button>
       </div>
+
+      <div class="carrito">
+        <div class="carritoHeader">
+          <button type="button" class="btnCerrarCarrito btn secondary" style="position:absolute;right:5%">X</button>
+          <span class="price" style="color:white; display:flex">Tu carrito</span>
+        </div>   
+        <br>
+        <div class="carritoItems">
+
+        </div>
+        <br>
+        <div class="carritoFooter">
+          <div class="totalPrice">
+            <span class="price" style="color:white; display:flex">Total:</span>
+            <span class="price" style="color:white; display:flex"></span>
+          </div>
+          <button type="button" class="btnComprar btn primary">Comprar</button>
+        </div>
+      </div>
+      
+
     </header>
 
     <main>
