--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>eCommerce</title>
+    <title>FullTech</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,15 +11,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   </head>
   <body>
     <header class="site-header">
       <div class="container nav-bar">
-        <div class="brand">ECOMMERCE</div>
+        <div class="brand">FullTech</div>
         <nav class="nav-links">
           <a href="#inicio">Inicio</a>
           <a href="#coleccion">Productos</a>
-          <a href="#contacto">Contacto</a>
         </nav>
         <button class="cart-btn" aria-label="Ver carrito">
           <span class="cart-label">Carrito</span>
@@ -69,17 +69,12 @@
       <section id="inicio" class="hero">
         <div class="container hero-grid">
           <div class="hero-copy">
-            <div class="pill">TITULO</div>
             <h1>
-              Lorem ipsum dolor sit amet consectetur 
+              LO ÚLTIMO EN TECNOLOGÍA A UN SOLO CLICK
             </h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem porro repellat magni consequuntur
+              Encontrá todo eso que necesitas acá, solo en FullTech
             </p>
-            <div class="hero-actions">
-              <a class="btn primary" href="#productos">Comprar ahora</a>
-            </div>
             <!--ESTADISTICAS-->
             <div class="hero-stats">
               <div>
@@ -103,12 +98,6 @@
       <section id="coleccion" class="section products">
         <div class="container section-head">
           <div>
-            <p class="eyebrow">TITULO</p>
-            <h2>SUBTITULO</h2>
-            <p class="lede">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione quos earum voluptas
-            </p>
-            <br>
             <h2>
               Aplicar filtros
             </h2>
@@ -124,6 +113,8 @@
 
         <div class="container product-grid"></div>
 
+        <br>
+
         <div class="btnVerMasContainer">
           <button type="button" class="btnVerMas btn primary">Ver más</button>
         </div>
@@ -134,13 +125,12 @@
     <footer id="contacto" class="site-footer">
       <div class="container footer-grid">
         <div>
-          <div class="brand">eCommerce</div>
-          <p>Elevate your game</p>
+          <div class="brand">FullTech</div>
+          <p>Mejora tu juego</p>
         </div>
         <div class="footer-links">
-          <a href="#coleccion">link 1</a>
-          <a href="#destacados">link 2</a>
-          <a href="#contacto">link 3</a>
+          <a>Copyright 2026 - Todos los derechos reservados</a> <br>
+          <a>Julián Lorenzatti</a>
         </div>
       </div>
     </footer>
